// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SearchResults when given a one result should render a correctly worded message 1`] = `
<ul
  className="SearchResults_1uxrx9c u-flex u-flexWrap"
>
  <li
    className="SearchResults_item_18h06t4 u-flexGrow1 u-flexBasisAuto"
  >
    <a
      className="Result_1ir07ge"
      href="foo"
      onClick={[Function]}
    >
      <div
        className="Image_e296pg"
        style={
          Object {
            "minHeight": 100,
          }
        }
      >
        <img
          alt="foo"
          className="Result_img_gt20ua u-imgResponsive"
          height={140}
          onLoad={[Function]}
          src="avatar.jpg&s=225"
          width={140}
        />
        <svg />
      </div>
      <div
        className="Result_userInfo_1xrl7m3 userinfo"
      >
        <p
          className="Result_username_nha6dw"
        >
          foo
        </p>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Component: SearchResults when given a set of results and entities should render them with a message 1`] = `
<ul
  className="SearchResults_1uxrx9c u-flex u-flexWrap"
>
  <li
    className="SearchResults_item_18h06t4 u-flexGrow1 u-flexBasisAuto"
  >
    <a
      className="Result_1ir07ge"
      href="foo"
      onClick={[Function]}
    >
      <div
        className="Image_e296pg"
        style={
          Object {
            "minHeight": 100,
          }
        }
      >
        <img
          alt="foo"
          className="Result_img_gt20ua u-imgResponsive"
          height={140}
          onLoad={[Function]}
          src="avatar.jpg&s=225"
          width={140}
        />
        <svg />
      </div>
      <div
        className="Result_userInfo_1xrl7m3 userinfo"
      >
        <p
          className="Result_username_nha6dw"
        >
          foo
        </p>
      </div>
    </a>
  </li>
  <li
    className="SearchResults_item_18h06t4 u-flexGrow1 u-flexBasisAuto"
  >
    <a
      className="Result_1ir07ge"
      href="foobar"
      onClick={[Function]}
    >
      <div
        className="Image_e296pg"
        style={
          Object {
            "minHeight": 100,
          }
        }
      >
        <img
          alt="foobar"
          className="Result_img_gt20ua u-imgResponsive"
          height={140}
          onLoad={[Function]}
          src="avatar.jpg&s=225"
          width={140}
        />
        <svg />
      </div>
      <div
        className="Result_userInfo_1xrl7m3 userinfo"
      >
        <p
          className="Result_username_nha6dw"
        >
          foobar
        </p>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Component: SearchResults when the results are 0 should not render a message 1`] = `
<ul
  className="SearchResults_1uxrx9c u-flex u-flexWrap"
/>
`;
